--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -702,13 +702,16 @@ CREATE A NEW SUMMARY OF DISCUSSION HERE.
   - authenticity and blackboxing in particular as a constructionist approach
 - DBR -> germ cell
 - use of collection of GPD a as a alignement with Hook and Repenning
-
+- STEPPED STAGES DESIGN
 ---
 
 This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project. The following table begins a process of synthesis of design factors. It is limited at this stage in analysis in relation to other research. Thus a discussion section follows which begins such analysis.
 
+### TABLE OF THE DESIGN FACTORS.
 
-TABLE OF THE DESIGN FACTORS.
+This discussion begins with a table  which synthesises aspects of systemic contradictions.
+
+INSERT TABLE OF THE DESIGN FACTORS.
 
 
 The subsequent sections synthesises the features of the design narrative and the summative table above, underpinned by existing research, specifically UMC, constructionist design principles.
@@ -728,8 +731,6 @@ While much the focus of much constructionist research  is on the design of tools
 DOES THIS LIVE HERE OR ABOVE?
 
 Key observations outlined in the table above align with the supported benefits outlined in research on the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] and the specific technique of starting with a half baked game template [@grizioti_game_2018-1].
-
-
 
 
 The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the _use_ and _modify_ stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way.
@@ -818,9 +819,22 @@ The position of GDPs in Activity Systems is complex. As framed as the start of t
 
 #### Outlining the key stages of GDP use in the structural learning design.
 
-PERHAPS THIS DOESN'T LIVE IN THIS CHAPTER / SPOT?
 
-In the learning design outlined in this chapter, GDPs drive stage-based instructional processes.
+---
+
+PATCHED IN INTEGRATE
+
+The identification of structural use of GDPs as a germ cell concept, facilitated the development of different progressively graded objectives (recognition, use and modification), as a concrete instance of UMC principles, which helps address the tension between freedom of choice of learner pathway, and expression of interest within a manageable technical structure (with relevant supporting documentation).
+
+Similar to SGD a progressively stepped approach is taken here.
+These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways.
+
+While SGD was limited in participant pathway choice, my design is not. Following the rationale of choice limitation as a strategy to reduce facilitator stress [@lytle_use_2019], this design  using a limited menu of GDPs as a structural and navigational framework.
+
+---  
+
+
+
 
 The shift from P1 to P2 represents a move from a design-build-test to a stepped, stage-based approach. This graduated approach introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task.
 
@@ -839,6 +853,8 @@ This work differs in a core template is provided allowing for less instruction f
 This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it (add this in as appendix using interview data).
 
 ADD LINK.  
+
+
 
 <!--
 REMOVED - ADD BACK IN LATER?
