--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -574,7 +574,7 @@ Once the code for the new game mechanic has been added, the child is guided to t
 
 
 
-### Discussion of GP- Flexible Navigation/ not aligning with design cycles
+### Discussion of GDPs not aligning with design cycles
 
 A possible existing framework on CGD&P to address the process of organising or scaffolding guided participation is that of design cycles. However, observations of participant design behaviour did not align with common design thinking concepts or advocated in design cycle frameworks [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. As typified in vignette 1 and 5, some younger participants, in particular, developed impressively fluid practices, demonstrating extremely rapid shifts between code editing, game testing, authoring assets in online tools, and migrating files, often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. If I had encouraged participants to follow prescribed design stages, this may have restricted this flexibility in practice [@kuby_rhizomatic_2016].
 
@@ -774,63 +774,60 @@ These examples are emerging process where cultural concepts are mutually constit
 This discussion section discusses the complexity of the exanded object of activity and the diverse mediational uses of GDPs using a 3GAT framework. Bearing in mind the challenge of communicating the diverse motivations and forms of activity involved, it returns to concepts of proximal flow and computational fluency present in CGD&P research to begin an analysis of how this research can contribute to understandings in this domain.
 
 
+### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
+
+
+
+This chapter has also addressed the complexity of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter.
+
+As such a fuller table summarises interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
+
+Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
+
+
+INSERT TABLE HERE.
+
+The examples in this table show GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources.   
+
+The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation .
+
+![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%}
+
+While this diagram helps represent a general picture of the pattern mediation it may be too general to be useful. In particular, there is complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand. In addition, it fails to communicate interplay with community level of activity and wider systems.
+
+Given the complexity of the expanded object and it would be unwieldy to try to represent in a 3GAT diagram form. As Engestrom noted in discussing challenges of representing new generations of AT, you can't keep adding triangles.
+
+At the larger scale, (see Figure.5.x) the activity system of games code and process can be seen as a boundary objects. Additionally, each game instance, can also be interpreted as a boundary object for complex, and expanded interacting processes of activity. Take for example findings showing participant draw some of their home gaming knowledge of GDPs  in varied ways in the new setting including: goal formation, as a lingua franca in design processes, and to provide feedback in playtesting.
+
+
+
 ### Expanded object in terms of motivation - fluency towards agency
 
 <!-- NOTE To restructure. -->
 
 
-Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&Pn terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the diversity of motivational aspects and resulting impact on diverse goal formation ( & flexible design practices) present in the findings of this chapter.
+Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&P in terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the diversity of motivational aspects and resulting impact on diverse goal formation ( & flexible design practices) present in the findings of this chapter.
 
 One of these motivational factors is remaining engaged or in flow.
-Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process.
+Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. The experience of flow is also a componed of the concept of fluency in technology use explored in Chapter 2  in varied forms within constructionist research, technological, digital and computation. The guiding priciple being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
 
-Chapter 2 also  explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
-By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
-
-As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
-
-- via instrumental coding competency needed to make changes effectively with or without supporting documentation
-- from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
-- via expression of creative or significant ideas in constructing digital products   
-
-What can be observed about the interaction of participants use of GDPs and the experience of participant fluency.
-
+<!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
 **Fluency and fluidity in practice**
 
 Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
 
+In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow [@basawapatna_zones_2013], with reponsive just in time documentation aligned with participants goal shown to be more engaging than principles based instruction. This research extends this technique by adding greater specificity in detail of use of patterns and most importantly choice of which patterns participants implement. The user-led process can be examined increased the experience of flow through possibilities for social identity development [@mao_optimal_2016].
 
-
-<!-- The data of this chapter develops the scope of this line of research with more specific using framed using socio-cultural analysis and concepts. -->
-
-### Link section - MERGE THIS WITH THE ABOVE.
-
-Returning to the gaps in research outline in Chapter 2...
-
-- limtations of fluency as a concept - thus agency
-- lack of pedagogies for fluency in a socio-cultural plane
--
 
 **limitation of fluency as a concepts**
 
-MOVE REFLECTIONS HERE.
-MOVE / COMPRESS - NOT VERY DIRECT YET
-In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow. A synthesis of flow theory with socio-cultural concerns of learning context. A gap in this research however was more specificity in detail of how patterns could help the process of maintaining flow beyond instrumental, albeit just-in-time instruction.  The lack of user-led process due to the linear nature of the instructions provided to implement also limits the experience of flow in terms of lack of possibilities for social identity expression [@mao_optimal_2016].  
-
-
-**Discussion on gap in designing for (either) fluency or agency**
+Returning to the gaps in research outline in Chapter 2 in regarding CGD&P
 
 The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
 
-NOTE THIS SHOULD BE LIMITED AS EXPLORED LATER TOO. FLUENCY NOT AGENCY / MAKE A DISTINCTION/ - OR PERHAPS REMOVE.
-
-MOVE / COMPRESS - TO LR? MAKE LINK THERE? POTENTIAL OF GDP MENU? THIS EMERGED THO - SO WHERE TO PLACE IT? AT END OF CHAPTER 5? TELL THE STORY OF EVOLUTION IN DISCUSSION?
-
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
-
-
-Fluency as a component characteristic of agency via use of diverse mediational strategies is explored in Chapter 7.
+In addition, while the concept flow is well established in socio-cultural research, the more specific concept of technological fluency are less explored. Given its wider scope within CHAT, in Chapter 7 characterics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
 
 
 <!-- - as a means of identity formation in groups and collectives [@gee_chapter_2000]
@@ -846,36 +843,6 @@ Fluency as a component characteristic of agency via use of diverse mediational s
 <!-- The collection of GDPs with linked documentation fulfils this role.    
 
 To extend the concepts of designing for fluidity, it is of value to explore the characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design. -->
-
-
-
-### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
-
-I THINK THIS IS PROBABLY BEST SKIPPED OR VERY BRIEF HERE.
-
-This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter.
-
-Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
-
-The examples in this chapter show GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources.   
-
-The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation .
-
-![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%}
-
-While this diagram helps represent a general picture of the pattern mediation it may be too general to be useful. In particular, there is complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand. In addition, it fails to communicate interplay with community level of activity and wider systems.
-
-At the larger scale, (see Figure.5.x) the activity system of games code and process can be seen as a boundary objects. Additionally, each game instance, can also be interpreted as a boundary object for complex, and expanded interacting processes of activity. Take for example findings showing participant draw some of their home gaming knowledge of GDPs  in varied ways in the new setting including: goal formation, as a lingua franca in design processes, and to provide feedback in playtesting.
-
-Given the complexity of the expanded object and it would be unwieldy to try to represent in a 3GAT diagram form. As Engestrom noted in discussing challenges of representing new generations of AT, you can't keep adding triangles.
-
-Instead the next chapter draws on x to represent some of this movement.
-
-This chapter has also addressed this complexity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. This section concludes with a fuller table. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
-
-INSERT FULL TABLE HERE
-
-
 
 ## Conclusion
 
