metaphors and moved order metaphors at end

--- a/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-5-Design.md_toc.md
@@ -41,13 +41,15 @@
                 RESULT?](#social-coding-processes---mix-of-need-and-design-and-result)
             -   [SUMMARY AND LINK](#summary-and-link)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Exploring systemic tensions in relation to existing
-            research](#exploring-systemic-tensions-in-relation-to-existing-research)
-        -   [DBR, CHAT & GDPs as the germ cell concept (unit of
-            analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis)
-        -   [Outlining the key stages of GDP use in the structural
-            learning
-            design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
+        -   [TABLE OF THE DESIGN
+            FACTORS.](#table-of-the-design-factors.)
+            -   [Exploring systemic tensions in relation to existing
+                research](#exploring-systemic-tensions-in-relation-to-existing-research)
+            -   [DBR, CHAT & GDPs as the germ cell concept (unit of
+                analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis)
+            -   [Outlining the key stages of GDP use in the structural
+                learning
+                design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
         -   [Summary and link to next
             chapter/s](#summary-and-link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
