--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -18,9 +18,8 @@
             processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-        -   [Discussion of GP- Flexible Navigation/ not aligning with
-            design
-            cycles](#discussion-of-gp--flexible-navigation-not-aligning-with-design-cycles)
+        -   [Discussion of GDPs not aligning with design
+            cycles](#discussion-of-gdps-not-aligning-with-design-cycles)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -33,14 +32,12 @@
                 evolving
                 idioculture](#gdps-as-components-of-emerging-repertoires-in-an-evolving-idioculture)
     -   [Discussion](#discussion)
-        -   [Expanded object in terms of motivation - fluency towards
-            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
-        -   [Link section - MERGE THIS WITH THE
-            ABOVE.](#link-section---merge-this-with-the-above.)
         -   [Addressing the use of GDPs in relation to theoretical
             understandings of processes of mediation and expanded
             objects of activity
             -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--)
+        -   [Expanded object in terms of motivation - fluency towards
+            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
